--- a/css/top.css
+++ b/css/top.css
@@ -56,35 +56,7 @@
 		}
 
 
-/* トップページの見出し画像にお知らせを出す時に使用 */
-#toppage_important_notice {
-  position: absolute;
-  top: 38px;
-  left: 625px;
-  width: 260px;
-  padding: 5px 10px;
-  background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.85);
-  border: 1px solid #94a288;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-}
-
-#toppage_important_notice h2 {
-  font-size: medium;
-  text-align: center;
-}
-
-#toppage_important_notice h2 a {
-  color: #DD0000;
-}
-
-#toppage_important_notice p {
-  text-align: center;
-}
-
-/* TOPICS 通常の横幅の場合 */
+/* TOPICS (右にごあいさつが来る場合) */
 #toppage_feature{
 	width: 530px;
 	float: left;
@@ -121,10 +93,6 @@ img#prj10{
 }
   html>/**/body #toppage_press{
 			clear: right;
-  }
-
-  #toppage_press .waku {
-      height: 228px;
   }
 
   td.topics_date{
@@ -170,7 +138,7 @@ img#prj10{
 	width: 254px;
 
 	font-size: 11px;
-	font-height: 12px;
+	line-height: 12px;
 	zoom: 1;
 }
 		html>/**/body #toppage_greeting{
@@ -205,10 +173,6 @@ img#prj10{
 		html>/**/body #toppage_access{
 			clear: right;
 		}
-
-	#access div{
-			height: 425px;
-	}
 
 		#rank_table{
 			position: absolute;
@@ -251,3 +215,33 @@ img#prj10{
 			background-color: white;
 			visibility: visible;
 		}
+
+/* トップページの見出し画像にお知らせを出す時に使用 */
+#toppage_important_notice {
+  position: absolute;
+  top: 38px;
+  left: 625px;
+  width: 260px;
+  padding: 5px 10px;
+  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.85);
+  border: 1px solid #94a288;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+}
+
+#toppage_important_notice h2 {
+  font-size: medium;
+  text-align: center;
+}
+
+#toppage_important_notice h2 a {
+  color: #DD0000;
+}
+
+#toppage_important_notice p {
+  text-align: center;
+}
+
+
