--- a/css/top.css
+++ b/css/top.css
@@ -208,12 +208,12 @@ img#prj10{
 
 		tr#no5, tr#no7, tr#no9, tr#no11, tr#no13, tr#no15, tr#no17, tr#no19{
 			background-color: #e7e7df;
-      visibility: hidden;
+      display: none;
 		}
 
-		tr#no4, tr#no6, tr#no8, tr#no10, tr#no12, tr#no14, tr#no16, tr#no18{
+		tr#no4, tr#no6, tr#no8, tr#no10, tr#no12, tr#no14, tr#no16, tr#no18, tr#no20{
 			background-color: white;
-      visibility: hidden;
+      display: none;
 		}
 
 /* トップページの見出し画像にお知らせを出す時に使用 */
