--- a/css/common/dept.css
+++ b/css/common/dept.css
@@ -50,3 +50,28 @@ ul#departmentslist a{
 ul#departmentslist a:visited{
 	font-weight: 400;
 }
+
+/* 1Ê¬´Ö¼ø¶È¾Ò²ð */
+#podcast_waku{
+  border-style: solid;
+  border-width: 1px;
+  border-color: #cccccc;
+  overflow: hidden;
+  position: relative;
+  padding: 0px;
+  margin: 2px;
+}
+
+#aboutpodcast_image{
+  padding: 0px;
+  margin: 15.5px 15.5px 12px;
+  position: relative;
+}
+
+#aboutpodcast_sentence{
+	padding: 0px;
+	margin: 0px 15.5px 15.5px;
+	position: relative;
+}
+
+
