--- a/css/common/contents.css
+++ b/css/common/contents.css
@@ -51,9 +51,7 @@
 .topjump{
 	clear: both;
 	margin-top: 10px;
-	position: absolute;
-	margin-right: 20px;
-	bottom: 0px;
+  text-align: right;
 }
 
 /* IE6 hack */
