--- a/css/common/footer.css
+++ b/css/common/footer.css
@@ -6,6 +6,7 @@
 	font-size: 11px; 	
 	text-align: left;
 	padding-top: 1em;
+	padding-left: 186px;
 	margin: 50px auto 0 auto ;
 	width: 100%;
 	overflow: hidden;
@@ -20,15 +21,14 @@
 }
 
 .navi{
-	padding-left: 2em;
-	padding-right: 2em;
-	text-align: left;
 	float: left; 
 	list-style-type: none;
-	position: relative;
-	left: 200px;
+	width: 148px;
 	margin: 0px;
-
+	padding-left: 2em;
+	padding-right: 2em;
+	position: relative;
+	text-align: left;
 }
  
 	.navi li {
