CSS整理コーディング規約
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6384 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/common/contents.css
+++ b/css/common/contents.css
@@ -2,81 +2,87 @@
 
 /* 本文 */
 #package{
-	position:relative;/* #menuを絶対配置するため */
-	overflow: hidden;
+    position: relative;/* #menuを絶対配置するため */
+    overflow: hidden;
 }
 
+/* Firefox, Safari対策 */
 #package2{
-	overflow: hidden; /* Firefox, Safari対策 */
 	position: relative;
 	top: -25px;
 	float: left;
+	overflow: hidden; 
 	/**/
 }
 
-	#menu{
-		position: absolute;
-		top: 285px;
-		left: 190px;
-	}
+#menu{
+    position: absolute;
+    top: 285px;
+    left: 190px;
+}
 
-		.menu0{
-			float: left;
-			height: 90px;
-			width: 180px;
-		}
+.menu0{
+    float: left;
+    width: 180px;
+    height: 90px;
+}
 
-			#studio_channel_date{
-				position: relative;
-				top: -70px;
-				left: 76px;
-				color: red;
-				font-size: 11px;
-			}
+#studio_channel_date{
+    position: relative;
+    top: -70px;
+    left: 76px;
+    color: red;
+    font-size: 11px;
+}
 
 #contents{
+    	margin: 0 20px 0 0 ;
+	padding: 0 0 20px 10px;
 	float: left;
-	margin: 0px;
-	background-color: white;
-	padding-bottom: 20px;
-	padding-left: 10px;
-	margin-right: 20px;
 	width: 710px;
 	overflow: visible;
+	background-color: white;
 	/*border-style: solid;
 	border-width: 1px;
 	border-color: blue;*/
 }
 
 .topjump{
-	clear: both;
-	margin-top: 10px;
-  padding-right: 6px;
-  text-align: right;
+    margin: 10px 0 0;
+    padding: 0 6px 0 0;
+/*
+    maigin-top: 10px;
+    padding-right: 6px;
+*/
+    clear: both;
+    text-align: right;
 }
 
 /* IE6 hack */
 * html #contents{
 	width: 705px;
 }
+
 /* IE7 hack */
 *:first-child+html #contents{
 	max-width: 710px;
 }
+
 /* Safari hack */
 body:first-of-type #contents{
 	max-width: none;
 	width: 705px;
 }
-	.pankuzu{
-		min-height: 28px; 
-		list-style-type: none;
-		padding: 5px 0px 0px 0px; /* paddingの初期化をすることで問題解決（メモ）*/
-		margin: 5px 0px 23px 0px;
-	}
 
-	 .pankuzu li{
-			display: inline;
-			color: #666666;
-		}
+.pankuzu{
+    margin: 5px 0 23px 0;
+    padding: 5px 0 0 0; /* paddingの初期化をすることで問題解決（メモ）*/
+    min-height: 28px; 
+    list-style-type: none;
+}
+
+.pankuzu li{
+    display: inline;
+    color: #666666;
+}
 
