--- a/css/common/dept.css
+++ b/css/common/dept.css
@@ -1,46 +1,52 @@
 @charset "euc-jp";
-/* 部局リスト */
+/* 
+-------------------------------------------------------------
+ 左側 部局リスト 
+-------------------------------------------------------------
+*/
+
 #departmentslist{
+    	margin: 0 5px 0 30px;
+    	padding: 0;
 	float: left;
 	width: 160px;
-	padding:0px;
-	margin: 0px 5px 0px 30px;
 	list-style:none;
 }
 
+/* IE6 ハック */
 *html #departmentslist{
-	float: left;
-	width: 160px;
-	margin: 0px 2px 0px 20px;
-	padding: 0px;
-	list-style:none;
+    margin: 0 2px 0 20px;
+    padding: 0;
+    float: left;
+    width: 160px;
+    list-style:none;
 }
 
 #departmentslist_list{
-	width: 157px;
-	padding:0px;
-	margin: 0px 5px 0px 0px;
-	position: relative;	
-	list-style:none;
+    margin: 0 5px 0 0;
+    padding: 0;
+    position: relative;	
+    width: 157px;
+    list-style:none;
 }
 
 #departmentslist_list_en{
-	width: 157px;
-	padding:0px;
-	margin: 0px 5px 0px 0px;
-	position: relative;	
-	list-style:none;
+    margin: 0 5px 0 0;
+    padding:0;
+    position: relative;	
+    width: 157px;
+    list-style:none;
 }
 
 #departmentslist_list li{
 	/* margin-bottom: -6px; */ /*画像の隙間をなくしている */
-  margin: 0;
-  height: 23px;
+    margin: 0;
+    height: 23px;
 }
 
 #departmentslist_list_en li{
-  margin: 0;
-  height: 40px;
+    margin: 0;
+    height: 40px;
 }
  
 ul#departmentslist a{
@@ -53,25 +59,25 @@ ul#departmentslist a:visited{
 
 /* 1分間授業紹介 */
 #podcast_waku{
-  border-style: solid;
-  border-width: 1px;
-  border-color: #cccccc;
-  overflow: hidden;
-  position: relative;
-  padding: 0px;
-  margin: 2px;
+    margin: 2px;
+    padding: 0;
+    position: relative;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    overflow: hidden;
 }
 
 #aboutpodcast_image{
-  padding: 0px;
-  margin: 15.5px 15.5px 12px;
-  position: relative;
+    margin: 15.5px 15.5px 12px;
+    padding: 0;
+    position: relative;
 }
 
 #aboutpodcast_sentence{
-	padding: 0px;
-	margin: 0px 15.5px 15.5px;
-	position: relative;
+    margin: 0 15.5px 15.5px;
+    padding: 0;
+    position: relative;
 }
 
 
