--- a/css/common/en.css
+++ b/css/common/en.css
@@ -14,24 +14,24 @@
 */
 /* おしらせ */
 #notice_en {
-        float: left;
-        border-style: solid;
-        border-width: 3px;
-        border-color: #e7e7df;
-        margin: 15px 0px 0px 0px;
-        width: 500px;
+    margin: 15px 0 0 0;
+    float: left;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #e7e7df;
+    width: 500px;
 }
 
 #greeting_en{
+        margin: 15px 0px 0px 10px;
+        padding: 0;
+	border-style: solid;
+        border-width: 1px;
+	border-color : #DDDDDD;
         float: left;
         width: 165px;
         overflow: hidden;
         /*height: 255px;*/
-        margin: 15px 0px 0px 10px;
-        padding: 0px 0px 0px 0px;
-        border-style: solid;
-        border-width: 1px;
-	border-color : #DDDDDD;
         font-size: 11px;
         font-height: 12px;
         zoom: 1;
