--- a/css/common/en.css
+++ b/css/common/en.css
@@ -16,20 +16,20 @@
 #notice_en {
     margin: 15px 0 0 0;
     float: left;
+    width: 500px;
     border-style: solid;
     border-width: 3px;
     border-color: #e7e7df;
-    width: 500px;
 }
 
 #greeting_en{
-        margin: 15px 0px 0px 10px;
+        margin: 15px 0 0 10px;
         padding: 0;
+	float: left;
+	width: 165px;
 	border-style: solid;
         border-width: 1px;
 	border-color : #DDDDDD;
-        float: left;
-        width: 165px;
         overflow: hidden;
         /*height: 255px;*/
         font-size: 11px;
