--- a/css/common/header.css
+++ b/css/common/header.css
@@ -2,63 +2,63 @@
 /*¥Ø¥Ã¥À¡¼*/
 
 .header{
+    	min-width: 975px;
         height: 90px; 
 	background-image: url(../../images/common/topbar.jpg);/* ÇØ·Ê²èÁü¡ÖÌ¾Âç¤Î¼ø¶È¡× */
-	min-width: 975px;
 	background-repeat: no-repeat;
 }
 
 .topheader{
+    	min-width: 975px;
 	height: 110px;
-	min-width: 975px;
 	background-image: url(../../images/common/topbar_top.jpg);	
 	background-repeat: no-repeat;
 }
 
 .header_en{
-        height: 90px;
-        background-image: url(../../images/en/topbar.jpg);/* ÇØ·Ê²èÁü¡ÖÌ¾Âç¤Î¼ø¶È¡× */
-        min-width: 975px;
-        background-repeat: no-repeat;
+    min-width: 975px;
+    height: 90px;
+    background-image: url(../../images/en/topbar.jpg);/* ÇØ·Ê²èÁü¡ÖÌ¾Âç¤Î¼ø¶È¡× */
+    background-repeat: no-repeat;
 }
 
 .topheader_en{
-        height: 110px;
-        min-width: 975px;
-        background-image: url(../../images/en/topbar_top.jpg);
-        background-repeat: no-repeat;
+    min-width: 975px;
+    height: 110px;
+    background-image: url(../../images/en/topbar_top.jpg);
+    background-repeat: no-repeat;
 }
 
 .header a#home_header{
-	display: block;
-	height: 90px;
-	width: 300px;
-	position: absolute;	
-	top: 0px;
-	left: 0px;
+    position: absolute;	
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 90px;
+    display: block;
 }
 
-	.header_sub{
-	 max-width/**/: 770px;
-	 /width: 770px; /* IE6ÂÐºö */
-		height: 60px;
-		margin-left: 200px;
-	padding: 0px;
-	}
+.header_sub{
+    max-width/**/: 770px;
+    /width: 770px; /* IE6ÂÐºö */
+    height: 60px;
+    margin-left: 200px;
+    padding: 0;
+}
 
-	html>/**/body .header_button{
-	margin-top: 15px;
-	width:475px;
-	height: 50px;
-	float: right;
-	}	
-	
-		.header_button{
-			margin-top: 15px;
-			width: 515px;
-			height: 50px;
-			margin-left: 320px;
-		}
+html>/**/body .header_button{
+    margin-top: 15px;
+    width:475px;
+    height: 50px;
+    float: right;
+}	
+
+.header_button{
+    margin-top: 15px;
+    margin-left: 320px;
+    width: 515px;
+    height: 50px;
+}
 
 	.header_button img{
 	border: none;	
