--- a/css/student_testimonials.css
+++ b/css/student_testimonials.css
@@ -8,8 +8,8 @@
         float: left;
         height: 430px;
         width: 730px;
-        margin: 0px 20px 0px -15px;
-        padding: 0px 0px 20px 0px;
+        margin: 0px 20px 10px -15px;
+        padding: 0;
         overflow: hidden;
 }
 
