--- a/css/course.css
+++ b/css/course.css
@@ -155,6 +155,8 @@ table.basic td, table.farewell td, table.relay td{
 }
 
 table.basic h4 {
+  float: none;
+  width: auto;
   margin: 10px 0 0 5px; 
 }
 
