--- a/css/clist.css
+++ b/css/clist.css
@@ -160,3 +160,26 @@ a#more_en{
 	top: 80px;
 	left: 560px;
 }
+
+/*
+------------------------------------------------------------
+   自動生成でないコースリスト用
+------------------------------------------------------------
+*/
+table.relay {
+	clear: right;
+	margin: 0 10px 25px 0;
+	border: 0;
+	border-collapse: collapse;
+	white-space: normal;
+}
+
+table.relay th{
+	border: 1px solid #999999;
+}
+
+table.relay td{
+	padding: 0 5px;
+	border: 1px solid #999999;
+}
+
