コースリスト用 CSS (clist.css) に最終講義、公開講座用の table 用のスタイルを追記. コース用 CSS (course.css) から不要な記述を削除. コーディングスタイルの統一.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6455 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/clist.css
+++ b/css/clist.css
@@ -174,11 +174,18 @@ table.relay {
 	white-space: normal;
 }
 
-table.relay th{
+table.farewell {
+	margin: 0 10px 25px 0;
+	border:0;
+	border-collapse: collapse;
+	white-space:normal;
+}
+
+table.relay th, table.farewell th {
 	border: 1px solid #999999;
 }
 
-table.relay td{
+table.relay td, table.farewell td {
 	padding: 0 5px;
 	border: 1px solid #999999;
 }
