--- a/css/clist.css
+++ b/css/clist.css
@@ -190,3 +190,13 @@ table.relay td, table.farewell td {
 	border: 1px solid #999999;
 }
 
+#podcast_right{
+	position: relative;
+	top: -25px;
+	float: right;
+	width: 160px;
+	margin: 10px 10px 10px 10px;
+	padding: 0;
+	background-color: white;
+}
+
