--- a/css/course.css
+++ b/css/course.css
@@ -82,7 +82,7 @@
 .e_text h3 {
 	float: left;
 	clear: left; 
-	margin: 1.5m 0 0 -145px; 
+	margin: 1.5em 0 0 -145px; 
 	padding: 0 0 0 15px;
 	width: 120px; 
 	background-image: url(../images/common/header3_box.png);
