本文領域上下の水平線のスタイルを course.css で設定.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6472 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/course.css
+++ b/css/course.css
@@ -45,8 +45,19 @@
 		width: 300px;
 	}
 
+#line1{		/* 赤い水平線上 */
+	width: 690px;
+	height: 4px;
+}
+
 #main_text{
 	clear: right;/* 問題点：位置が左の部局リストの下まで下がってしまっている */
+}
+
+#line2{		/* 赤い水平線下 */
+	width:690px;
+	height:4px;
+	margin-top:1.5em;
 }
 
 #release_date {
