リスト関係のスタイル調整. ネストしたときにレベルの区別がつかない問題の対応.
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6491 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/course.css
+++ b/css/course.css
@@ -117,8 +117,21 @@
 	width: 555px; 
 }
 
-.e_text ul, .e_text ol, .e_text dl{
+.e_text ul, .e_text ol {
+	margin: 18px 0 0 30px;
+	padding: 0 0 0 0;
+}
+
+.e_text dl{
 	margin: 18px 0 0 0;
+	padding: 0 0 0 0;
+}
+
+.e_text dl dt{
+	margin: 0.5em 0 0 0;
+}
+.e_text dl dd{
+	margin: 0 0 0 30px;
 	padding: 0 0 0 0;
 }
 
@@ -126,9 +139,6 @@
 	clear: left;
 }
 
-.e_text dt {
-	margin: 0.5em 0 0 0;
-}
 
 .e_text table {
 	margin: 18px 0 0 0;
