--- a/css/course.css
+++ b/css/course.css
@@ -118,11 +118,13 @@
 }
 
 .e_text ul, .e_text ol {
+  float: left;
 	margin: 18px 0 0 30px;
 	padding: 0 0 0 0;
 }
 
 .e_text dl{
+  float: left;
 	margin: 18px 0 0 0;
 	padding: 0 0 0 0;
 }
