--- a/css/course.css
+++ b/css/course.css
@@ -105,7 +105,7 @@
 
 .e_text h4, .e_text h5 {
 	float: left;
-	width: 100%; 
+	width: 555px; 
 	margin: 18px 0 0 0;
 	font-size: 13px;
 	font-weight: bold;
@@ -113,7 +113,7 @@
 
 .e_text p {
 	float: left; 
-	width: 100%; 
+	width: 555px; 
 	margin: 18px 0 0 0; 
 }
 
