--- a/css/course.css
+++ b/css/course.css
@@ -120,7 +120,12 @@
 .e_text ul, .e_text ol {
 	float: left;
 	width: 555px; 
-	margin: 18px 0 0 15px;
+	margin: 18px 0 0 0;
+	padding: 0 0 0 0;
+}
+
+.e_text ul li, .e_text ol li{
+	margin: 0 0 0 30px;
 	padding: 0 0 0 0;
 }
 
@@ -134,6 +139,7 @@
 .e_text dl dt{
 	margin: 6px 0 0 0;
 }
+
 .e_text dl dd{
 	margin: 0 0 0 30px;
 	padding: 0 0 0 0;
@@ -142,7 +148,7 @@
 .e_text * ul, .e_text * ol, .e_text * li{
 	clear: left;
 	width: auto;
-	margin: 0 0 0 30px;
+	margin: 0 0 0 0;
 }
 
 
