--- a/css/course.css
+++ b/css/course.css
@@ -129,7 +129,7 @@
 	padding: 0 0 0 0;
 }
 
-.e_text ul li, .e_text ol li p{
+.e_text ul li p, .e_text ol li p{
 	float: none;
 	width: auto;
 	margin: 0 0 18px 0; 
