--- a/css/course.css
+++ b/css/course.css
@@ -81,6 +81,27 @@
 	padding: 0 0 0 150px;
 }
 
+/*
+.e_text p{
+	margin-bottom: 0em; 
+	margin-top: 1.5em; 
+	
+	float:left; 
+	width:555px; 
+}
+
+.e_text table p {
+  float: none;
+  width: auto;
+}
+
+.e_text * ul, .e_text * ol, .e_text * li{
+	margin-left: 0;
+	margin-bottom: 0;
+	clear: left;
+}
+*/
+
 .e_text h2 {
 	margin: 10px 0 0 -145px;
 	padding: 0 15px 0 15px;
@@ -113,7 +134,7 @@
 
 .e_text p {
 	float: left; 
-	width: 555px;
+	width: 15px;
 	margin: 18px 0 0 0; 
 }
 
