--- a/css/course.css
+++ b/css/course.css
@@ -80,19 +80,20 @@
 	margin: 0 0 0 0;
 	padding: 0 0 0 150px;
 }
-
+/*
 .e_text p{
-	margin-bottom: 0em; 
-	margin-top: 1.5em; 
-	
-	float:left; 
-	width:15px; 
+        margin-bottom: 0em;
+        margin-top: 1.5em;
+
+        float:left;
+        width:555px;
 }
 
 .e_text table p {
   float: none;
   width: auto;
 }
+*/
 
 .e_text * ul, .e_text * ol, .e_text * li{
 	margin-left: 0;
