--- a/css/course.css
+++ b/css/course.css
@@ -102,7 +102,7 @@
 
 
 .e_text h2 {
-	margin: 10px 0 0 -145px;
+	margin: 0 0 0 0px;
 	padding: 0 15px 0 15px;
 	width: 120px;
 	background-repeat: no-repeat;
