topics cuts test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6557 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -64,9 +64,9 @@ ul
 
 p.info
 {
-    width: 12em;
+    width: 200px;
     padding: 1em:
-    bockground-color: gold;
+    bockground-color: gainsboro;
     float: right;
     clear: both;
 }
