topics cuts css
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6558 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -69,6 +69,8 @@ p.info
     bockground-color: gainsboro;
     float: right;
     clear: both;
+    border-style: dotted:
+    border-width: 1px;
 }
 
 img.cut
