--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -70,13 +70,14 @@ p.info
     clear: both;
     border-style: dotted:
     border-width: 1px;
+    float: right;
 }
 
 img.cut
 {
     width: 70px;
     height: 70px;
-
+    
 }
 
 #articles_detail
