topics cut align test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6562 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -62,22 +62,28 @@ ul
 
 }
 
-p.info
+div.info
 {
-    width: 200px;
     padding: 1em:
     bockground-color: gainsboro;
     clear: both;
     border-style: dotted:
     border-width: 1px;
     float: right;
+    text-align: right;
+}
+
+div.info p
+{
+    position: absolute;
+    top: 0;
+    left: 70px;
 }
 
 img.cut
 {
     width: 70px;
     height: 70px;
-    
 }
 
 #articles_detail
