--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -71,13 +71,14 @@ div.info
     border-width: 1px;
     float: right;
     text-align: right;
+    position: relative;
 }
 
 div.info p
 {
     position: absolute;
     top: 0;
-    left: 70px;
+    right: 70px;
 }
 
 img.cut
