--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -72,13 +72,14 @@ div.info
     float: right;
     text-align: right;
     position: relative;
+    width: 200px;
 }
 
 div.info p
 {
     position: absolute;
     top: 0;
-    right: 70px;
+    right: 75px;
 }
 
 img.cut
