--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -4,13 +4,23 @@
     margin-left: 30px;
     font-family: "£Í£Ó ¥´¥·¥Ã¥¯",sans-serif; 
     font-weight: 500;
-    font-color: #020202;
+    color: #020202;
     font-size: inherit;
 }
 
 h2
 {
     color: #cc6699;
+}
+
+img#tp_door
+{
+    float: right;
+}
+
+img#tp_Kanban
+{
+    clear: right;
 }
 
 ul
@@ -85,30 +95,32 @@ ul
     color: #cc6699;
 }
 
-div.info
+div.tp_LInk
 {
-    padding: 1em:
-    bockground-color: gainsboro;
+    color: white;
     clear: both;
-    border-style: dotted:
-    border-width: 1px;
     float: right;
-    text-align: right;
+    text-align: center;
     position: relative;
-    width: 200px;
+    width: 166px;
+    height: 168px;
 }
 
-div.info p
+div.tp_LInk p
 {
     position: absolute;
-    top: 0;
-    right: 75px;
+    top: 70px;
+    text-align: center;
+    left: 0px;
+    width: 100%
+    z-index: 1;
 }
 
-img.cut
+div.tp_LInk img 
 {
-    width: 70px;
-    height: 70px;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
 
 #articles_detail
