--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -7,7 +7,6 @@
     color: #020202;
     font-size: inherit;
     min-height: 500px;
-    position: relative !important ;
 }
 
 h2
@@ -25,7 +24,8 @@ img#tp_door
 img#tp_Kanban
 {
     poition: absolute;
-    right: 0px;
+    left: 0px;
+    top: 28px;
 }
 
 ul
@@ -114,7 +114,7 @@ div.tp_LInk
 div.tp_LInk p
 {
     position: absolute;
-    top: 70px;
+    top: 65px;
     text-align: center;
     left: 0px;
     width: 100%;
