--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -23,7 +23,7 @@ img#tp_door
 
 img#tp_Kanban
 {
-    poition: absolute;
+    poition: absolute !important ;
     left: 0px;
     top: 28px;
 }
@@ -114,7 +114,7 @@ div.tp_LInk
 div.tp_LInk p
 {
     position: absolute;
-    top: 65px;
+    top: 60px;
     text-align: center;
     left: 0px;
     width: 100%;
