--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -2,3 +2,14 @@ img#img1{
 width: 400px;
 height: 300px;
 }
+
+img#img2{
+width: 400px;
+height: 300px;
+}
+
+img#img3{
+width: 400px;
+height: 300px;
+}
+
