--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -1,15 +1,15 @@
 img#img1{
-width: 400px;
-height: 300px;
+width: 100%;
+height: 100%;
 }
 
 img#img2{
-width: 400px;
-height: 300px;
+width: 100%;
+height: 100%;
 }
 
 img#img3{
-width: 400px;
-height: 300px;
+width: 100%;
+height: 100%;
 }
 
