--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -1,15 +1,18 @@
 img#img1{
 width: 100%;
 height: 100%;
+margin: 0% 20%;
 }
 
 img#img2{
 width: 100%;
 height: 100%;
+margin: 0% 20%;
 }
 
 img#img3{
 width: 100%;
 height: 100%;
+margin: 0% 20%;
 }
 
