中津川画像2/16
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6594 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -1,18 +1,18 @@
 img#img1{
-width: 50%;
-height: 50%;
-margin: 0% 20%;
+width: 200px;
+height: 320px;
+margin: 0 200px;
 }
 
 img#img2{
-width: 50%;
-height: 50%;
-margin: 0% 20%;
+width: 200px;
+height: 320px;
+margin: 0 200px;
 }
 
 img#img3{
-width: 50%;
-height: 50%;
-margin: 0% 20%;
+width: 200px;
+height: 320px;
+margin: 0 200px;
 }
 
