中津川画像2/17
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6600 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -17,7 +17,8 @@ margin: 0 200px;
 }
 
 img#img4{
-width: 320px;
-height: 400px;
-margin: 0 200px;
+width: 380px;
+height: 300px;
+margin: 0 20px;
+float: right;
 }
