中津川画像2/17
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6602 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -17,8 +17,9 @@ margin: 0 200px;
 }
 
 img#img4{
-width: 380px;
-height: 300px;
-margin: 0 20px;
-float: right;
+    width: 250px;
+    height: 180px;
+    position: absolute;
+    top: 20px;
+    left: 550px;
 }
