--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -27,7 +27,7 @@ img#tp_Kanban
 /*    left: 0px;
     top: 28px;*/
     left: -30px;
-    top: -35px;
+    top: -38px;
 }
 
 ul
@@ -44,7 +44,7 @@ ul
 #articles_titles
 {
     width: 330px;
-    float: left;
+/*    float: left;*/
     margin: 10px;
     padding: 0;
 }
@@ -90,7 +90,7 @@ ul
 
 #articles_intro li h2:before
 {
-    content:"¡ü";
+    content:"¡ü ";
     color: ee88bb;
 }
 
