--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -27,7 +27,7 @@ img#tp_Kanban
 /*    left: 0px;
     top: 28px;*/
     left: -30px;
-    top: -40px;
+    top: -32px;
 }
 
 ul
@@ -41,15 +41,15 @@ ul
     font-height: 24px;
 }
 
-/*
+
 #articles_titles
 {
     width: 330px;
-    float: left;
+/*    float: left;*/
     margin: 10px;
     padding: 0;
 }
-*/
+
 
 #articles_titles li a
 {
