topics3 css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6609 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -42,21 +42,19 @@ ul
 }
 
 
-#articles_titles
+#articles_title
 {
     width: 330px;
-/*    float: left;*/
+    float: left;
     margin: 10px;
     padding: 0;
 }
 
 
-#articles_titles li a
+#articles_title li a
 {
     display: block;
     width: 100%;
-    border-style: dotted;
-    border-width: 1px;
     padding: 1ex;
 }
 
