topics3 css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6610 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -7,6 +7,9 @@
     color: #020202;
     font-size: inherit;
     min-height: 500px;
+    background-image: url("./images/ja/topics3/asobi_Background1.jpg");
+    background-repeat: no-repeat;
+    background-position: -30px 164px;
 }
 
 h2
@@ -19,6 +22,7 @@ img#tp_door
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 2;
 }
 
 img#tp_Kanban
