topics3 css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6611 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -7,7 +7,7 @@
     color: #020202;
     font-size: inherit;
     min-height: 500px;
-    background-image: url("./images/ja/topics3/asobi_Background1.jpg");
+    background-image: url("../../images/ja/topics3/asobi_Background1.jpg");
     background-repeat: no-repeat;
     background-position: -30px 164px;
 }
