--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -21,7 +21,7 @@ h2
 img#tp_door
 {
     position: absolute;
-    right: 10px;
+    right: 20px;
     top: 5px;
     z-index: 2;
 }
@@ -60,7 +60,14 @@ ul
 {
     display: block;
     width: 100%;
+    height: 100%;
     padding: 1ex;
+}
+
+#articles_title li a:hover
+{
+    text-decoration: none;
+    color: inherit;
 }
 
 #articles_title li a h2 /* コース名 */
@@ -85,6 +92,12 @@ ul
 
 #intro1,#intro2,#intro3,#intro4,#intro5,#intro6
 {
+    display: none;
+}
+
+#tp_title1,#tp_title2,#tp_title3,#tp_title4,#tp_title5
+{
+    color: #99CCCC;
     display: none;
 }
 
