--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -132,7 +132,7 @@ div.tp_LInk
 div.tp_LInk p
 {
     position: absolute;
-    top: 55px;
+    top: 57px;
     text-align: center;
     left: 0px;
     height: 0;
@@ -142,9 +142,9 @@ div.tp_LInk p
     font-size: larger;
 }
 
-div.tp_LInk:hover
+div.tp_LInk p:hover
 {
-    text-decorarion: none;
+    text-decoration: none;
 }
 
 div.tp_LInk img 
