topics3 blue_bar
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6644 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -115,8 +115,8 @@ ul
     display: none;
     margin: 0;
     padding: 0;
-    position: absolute;
-    bottom: 0;
+/*    position: absolute;
+    bottom: 0;*/
 }
 
 #articles_intro li h2 /* キャッチコピー */
@@ -204,12 +204,14 @@ img.c_left
 {
     float: left;
     clear: both;
+    margin: 1em;
 }
 
 img.c_right
 {
     float: right;
     clear: both;
+    margin: 1em;
 }
 
 hr
