css changeColor test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6650 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -106,7 +106,7 @@ ul
     display: none;
 }
 
-#tp_title1,#tp_title2,#tp_title3,#tp_title4,#tp_title5
+#blue_bar1,#blue_bar2,#blue_bar3,#blue_bar4,#blue_bar5,#blue_bar6
 {
     height: 4px;
     background-color: #99CCCC;
